[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netscan"
version = "1.0.0"
description = "Modern async network scanner with rich terminal output"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "netscan contributors" }]
keywords = ["network", "scanner", "async", "security", "port-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
netscan = "netscan.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/netscan"
Repository = "https://github.com/yourusername/netscan"
Issues = "https://github.com/yourusername/netscan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/netscan"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/netscan"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (partial)
]
ignore = [
    "ANN101",  # self type annotation not needed
    "ANN102",  # cls type annotation not needed
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "E501",    # line-too-long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
